adicionei as propriedades displai inline-block, text-align center, list-style-position outside no seletor da ol, e para os li's dei um padding-inline-start 30px para corrigir o bug

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -15,6 +15,8 @@
     padding: 0;
 }
 
+/* gerais */
+
 html {
     font-family: 'Roboto', sans-serif;
 }
@@ -35,6 +37,8 @@ button:focus {
     color: white;
 }
 
+/* imagens */
+
 img {
     width: 70px;
     height: 70px;
@@ -43,8 +47,8 @@ img {
 
 div>p:first-child {
     display: block;
-    padding-top: 150px;
-    width: 180px;
+    padding-top: 120px;
+    width: 200px;
     margin: 0 auto;
 }
 
@@ -88,6 +92,14 @@ div>p:first-child {
 
 #container-de-descricao>ol {
     padding: 15px 0px;
+
+    list-style-position: outside;
+    display: inline-block;
+    text-align: center;
+}
+
+ol li {
+    padding-inline-start: 30px;
 }
 
 #container-para-comprar {
